--- a/version/src/App.css
+++ b/version/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 } */
+.ms-80 {
+  margin-left: 80px !important;
+}
+
+.ms-250 {
+  margin-left: 250px !important;
+}
+
+.transition-all {
+  transition: all 0.3s ease;
+}
